first style edit

--- a/resumestyle.css
+++ b/resumestyle.css
@@ -1,4 +1,4 @@
-body, div, h1, h2, h3, h4, p {
+body, div, h1, h2, h3, h4, h5 p {
 	margin: 0;
 	padding: 0;
 }
@@ -27,7 +27,7 @@ h3 {
 	color: #333;
 }
 
-h4 {
+h5 {
 	text-align: right;
 }
 
