--- a/resumestyle.css
+++ b/resumestyle.css
@@ -31,6 +31,20 @@ h5 {
 	text-align: right;
 }
 
+.section {
+	float: left;
+	border-bottom: 1px solid #ccc;
+}
+
+.content.head {
+	float: left;
+	width: 15%;
+}
+
+.content {
+	float: right;
+	width: 80%;
+}
 table {
 	border: 0px;
 	width: 100%;
