--- a/resumestyle.css
+++ b/resumestyle.css
@@ -15,6 +15,7 @@ h1 {
 	font-size: 36px;
 	text-transform: uppercase;
 	letter-spacing: 3px;
+	top: 0px;
 }
 
 h2 {
@@ -23,19 +24,18 @@ h2 {
 	font-size: 150%;
 }
 
-h3, h6 {
+h3 {
 	text-align: left;
 	color: #333;
-}
-
-h3 {
 	text-transform: uppercase;
 	font-weight: bold;
+	font-size:75%;
 }
 
 h4 {
 	text-align: left;
 	top: 0px;
+	font-size: 45%;
 }
 
 h5 {
