--- a/resumestyle.css
+++ b/resumestyle.css
@@ -42,6 +42,11 @@ h5 {
 	text-align: right;
 	top: 6px;
 	position: relative;
+	vertical-align:text-top;
+}
+
+h6 {
+	line-height: 1px;
 }
 
 .section {
