--- a/resumestyle.css
+++ b/resumestyle.css
@@ -38,7 +38,7 @@ h4 {
 	text-align: left;
 	top: 0px;
 	font-size: 83%;
-	line-height: normal;
+	line-height: 0px;
 
 }
 
@@ -51,10 +51,6 @@ h5 {
 
 h6 {
 	line-height: normal;
-}
-
-ul {
-	padding: 0;
 }
 
 .section {
