--- a/resumestyle.css
+++ b/resumestyle.css
@@ -16,14 +16,14 @@ h1 {
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	top: 0px;
-	color: DarkSeaGreen;
+	color: #8FBC8F;
 }
 
 h2 {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-size: 150%;
-	color: DarkOliveGreen;
+	color: #556B2F;
 }
 
 h3 {
