--- a/resumestyle.css
+++ b/resumestyle.css
@@ -9,6 +9,7 @@ body {
 	font-weight: normal;
 	color: #444;
 	text-align: left;
+	vertical-align: top;
 }
 
 h1 {
@@ -19,6 +20,7 @@ h1 {
 	color: #8FBC8F;
 	vertical-align:text-top;
 	line-height: normal;
+	text-align: center;
 }
 
 h2 {
