--- a/resumestyle.css
+++ b/resumestyle.css
@@ -3,6 +3,10 @@ body, div, h1, h2, h3, h4, h5 h6 p {
 	padding: 0;
 }
 
+* {
+	line-height: 10px;
+}
+
 body {
 	font: 13px/1.231 serif;
 	font-family: Georgia;
